--- a/index.html
+++ b/index.html
@@ -141,17 +141,17 @@
           <p class="h6 text-uppercase text-primary">Concepto</p>
           <h2 class="mb-5">¿Por qué estamos aquí?</h2>
           <p>
-            Plataforma que ponga en contacto personas que necesiten del servicio
-            de comida con personas del rubro informal especialmente afectado por
-            la pandemia del COVID.
+            Somos una plataforma que pondrá en contacto personas que quieran
+            comer con personas del rubro informal, especialmente afectado por la
+            pandemia del COVID.
           </p>
           <p>
-            La economía peruana se sostiene sobre altas cuotas de informalidad
-            que dejan a las familias en situaciones precarias. Si bien informall
-            no soluciona el problema de la informalidad directamente,
-            diversifica los ingresos de las familias. el escenario COVID ha
-            dejado a muchas personas desempleadas, siendo el sector informal el
-            más afectado.
+            La economía peruana se sostiene sobre altos porcentajes de
+            informalidad. Estas personas son las más afectadas por la pandemia
+            COVID que ha dejado algunas familias en situaciones precarias. Si
+            bien InforMall no soluciona el problema de la informalidad
+            directamente, diversifica los ingresos de las familias y crea una
+            oferta de comida al acceso de todas las personas.
           </p>
           <!--<div class="row pb-5">
             <div class="col-lg-4 col-md-6 mb-4 mb-lg-0">
@@ -281,10 +281,11 @@
                       src="icons/Orion_dinner.svg"
                       style="width: 60px; height: 60px; color: #ff904e"
                     />
-                    <h3 class="font-weight-normal h4 my-4">Compra Informal</h3>
+                    <h3 class="font-weight-normal h4 my-4">Compra Directa</h3>
                     <p class="text-small mb-0">
-                      Lorem ipsum dolor amet consectetur adipisicing sed do
-                      eiusmod tempor incididunt ut labore.
+                      Tú escoges los precios, estilo, modalidad Busca tu pedido:
+                      hay vendedores muy cerca de ti, algunos hacen platos
+                      deliciosos.
                     </p>
                   </div>
                 </div>
@@ -315,8 +316,8 @@
                     />
                     <h3 class="font-weight-normal h4 my-4">Chat</h3>
                     <p class="text-small mb-0">
-                      Lorem ipsum dolor amet consectetur adipisicing sed do
-                      eiusmod tempor incididunt ut labore.
+                      Creamos un canal de comunicaciones directo y centralizado
+                      para garantizar la mejor experiencia.
                     </p>
                   </div>
                 </div>
@@ -377,8 +378,7 @@
           <div class="col-lg-6 mb-4 mb-lg-0">
             <img class="mb-4" src="img/logo.png" alt="" width="110" />
             <p class="text-muted">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore.
+              Informall @ 2020 todos los derechos reservados
             </p>
           </div>
           <div class="col-lg-6">
