--- a/index.html
+++ b/index.html
@@ -283,9 +283,7 @@
                     />
                     <h3 class="font-weight-normal h4 my-4">Compra Directa</h3>
                     <p class="text-small mb-0">
-                      Tú escoges los precios, estilo, modalidad Busca tu pedido:
-                      hay vendedores muy cerca de ti, algunos hacen platos
-                      deliciosos.
+                      Tú escoges los precios, estilo o modalidad.
                     </p>
                   </div>
                 </div>
@@ -301,8 +299,8 @@
                     </svg>
                     <h3 class="font-weight-normal h4 my-4">Busca tu pedido</h3>
                     <p class="text-small mb-0">
-                      Informall permite buscar ofertas cercanas, ofertas mejor
-                      valoradas y ver dónde esta tu pedido.
+                      Hay vendedores muy cerca de ti, algunos hacen platos
+                      deliciosos.
                     </p>
                   </div>
                 </div>
