--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Informall</title>
+    <title>TaiPa</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="robots" content="all,follow" />
@@ -149,7 +149,7 @@
             La economía peruana se sostiene sobre altos porcentajes de
             informalidad. Estas personas son las más afectadas por la pandemia
             COVID que ha dejado algunas familias en situaciones precarias. Si
-            bien InforMall no soluciona el problema de la informalidad
+            bien TaiPa no soluciona el problema de la informalidad
             directamente, diversifica los ingresos de las familias y crea una
             oferta de comida al acceso de todas las personas.
           </p>
@@ -376,15 +376,15 @@
           <div class="col-lg-6 mb-4 mb-lg-0">
             <img class="mb-4" src="img/logo.png" alt="" width="110" />
             <p class="text-muted">
-              Informall @ 2020 todos los derechos reservados
+              TaiPa @ 2020 todos los derechos reservados
             </p>
           </div>
           <div class="col-lg-6">
             <h2 class="h5 mb-4">Contact Info</h2>
             <ul class="list-unstyled mr-4 mb-3">
               <li class="mb-2">
-                <a class="footer-link" href="mailto:informall@example.com"
-                  >infomall@example.com</a
+                <a class="footer-link" href="mailto:informallapp@gmail.com"
+                  >informallapp@gmail.com</a
                 >
               </li>
             </ul>
