--- a/index.html
+++ b/index.html
@@ -141,17 +141,23 @@
           <p class="h6 text-uppercase text-primary">Concepto</p>
           <h2 class="mb-5">¿Por qué estamos aquí?</h2>
           <p>
-            Somos una plataforma que pondrá en contacto personas que quieran
-            comer con personas del rubro informal, especialmente afectado por la
-            pandemia del COVID.
+            TaiPa quiere ser el Rappi de los emprendedores del Perú. Ponemos en
+            contacto pequeños restaurantes y personas que quieran ofrecer sus
+            platos, con aquellas que quieran comida variada y accesible.
+          </p>
+          <p>
+            Decidimos crear TaiPa porque nos dimos cuenta de que en el Perú aún
+            había escasa experiencia en plataformas digitales, muchas personas
+            con talento para la cocina y un servicio de delivery que no servía a
+            todas las capas de la población.
           </p>
           <p>
             La economía peruana se sostiene sobre altos porcentajes de
             informalidad. Estas personas son las más afectadas por la pandemia
             COVID que ha dejado algunas familias en situaciones precarias. Si
-            bien TaiPa no soluciona el problema de la informalidad
-            directamente, diversifica los ingresos de las familias y crea una
-            oferta de comida al acceso de todas las personas.
+            bien TaiPa no soluciona el problema de la informalidad directamente,
+            diversifica los ingresos de las familias y crea una oferta de comida
+            al acceso de todas las personas.
           </p>
           <!--<div class="row pb-5">
             <div class="col-lg-4 col-md-6 mb-4 mb-lg-0">
@@ -205,6 +211,15 @@
             <div class="col-lg-6">
               <h2>Rompemos la barrera</h2>
               <p class="text-muted">
+                Queremos ser la herramienta que permita que el emprendedor
+                peruano se transforme en empresario:
+              </p>
+              <ul>
+                <li>Digitalización</li>
+                <li>Formalización</li>
+              </ul>
+
+              <p class="text-muted">
                 Creamos un punto de encuentro entre cocineros de todo tipo:
               </p>
               <ul>
@@ -213,14 +228,17 @@
                 <li>Pequeños restaurantes no digitalizados</li>
               </ul>
               <p>
+                Y personas de todo tipo que busquen comer algo rápido u
+                organizar sus comidas semanales.
+              </p>
+              <p>
                 Esta oferta no se limita al delivery, sino que se abre al
                 takeaway o cualquier tipo de pacto que ambas partes convengan.
               </p>
               <p>
-                Además, el hecho de que se abra la veda a sectores económicos
-                más humildes, no es un hecho limitante, sino que sigue
-                permitiendo que aquellos gourmet o personas más pujantes puedan
-                participar de él, con servicios más refinados adaptados a ellos.
+                Las demás plataformas de comida reparten comida de franquicias
+                olvidando a la típica cocina peruana y a las clases más
+                humildes.
               </p>
             </div>
           </div>
@@ -375,9 +393,7 @@
         <div class="row">
           <div class="col-lg-6 mb-4 mb-lg-0">
             <img class="mb-4" src="img/logo.png" alt="" width="110" />
-            <p class="text-muted">
-              TaiPa @ 2020 todos los derechos reservados
-            </p>
+            <p class="text-muted">TaiPa @ 2020 todos los derechos reservados</p>
           </div>
           <div class="col-lg-6">
             <h2 class="h5 mb-4">Contact Info</h2>
