--- a/index.html
+++ b/index.html
@@ -141,9 +141,10 @@
           <p class="h6 text-uppercase text-primary">Concepto</p>
           <h2 class="mb-5">¿Por qué estamos aquí?</h2>
           <p>
-            TaiPa quiere ser el Rappi de los emprendedores del Perú. Ponemos en
-            contacto pequeños restaurantes y personas que quieran ofrecer sus
-            platos, con aquellas que quieran comida variada y accesible.
+            TaiPa quiere ser el Rappi de aquellas personas del Perú. Ponemos en
+            contacto pequeños restaurantes y aquellas personas que quieran
+            ofrecer sus platos, con aquellas que quieran comida variada y
+            accesible.
           </p>
           <p>
             Decidimos crear TaiPa porque nos dimos cuenta de que en el Perú aún
@@ -210,6 +211,11 @@
             </div>
             <div class="col-lg-6">
               <h2>Rompemos la barrera</h2>
+              <p>
+                Las demás plataformas de comida reparten comida de franquicias
+                olvidando a la típica cocina peruana y a las clases más
+                humildes.
+              </p>
               <p class="text-muted">
                 Queremos ser la herramienta que permita que el emprendedor
                 peruano se transforme en empresario:
@@ -228,17 +234,12 @@
                 <li>Pequeños restaurantes no digitalizados</li>
               </ul>
               <p>
-                Y personas de todo tipo que busquen comer algo rápido u
+                Y todo tipo de personas que busquen comer algo rápido u
                 organizar sus comidas semanales.
               </p>
               <p>
                 Esta oferta no se limita al delivery, sino que se abre al
                 takeaway o cualquier tipo de pacto que ambas partes convengan.
-              </p>
-              <p>
-                Las demás plataformas de comida reparten comida de franquicias
-                olvidando a la típica cocina peruana y a las clases más
-                humildes.
               </p>
             </div>
           </div>
