--- a/index.html
+++ b/index.html
@@ -93,12 +93,65 @@
       <div class="container">
         <div class="row py-5">
           <div class="col-lg-5 py-5">
-            <h1 class="font-weight-bold">Encuentra tu comida referente</h1>
+            <h1 class="font-weight-bold">Encuentra tu comida favorita</h1>
             <p class="my-4 text-muted">
               Descubre grandes experiencias a tu alrededor y hazlas tuyas
             </p>
             <ul class="list-inline mb-0">
-              <p class="my-1 text-muted">Próximamente en:</p>
+              <!-- Begin Mailchimp Signup Form -->
+
+              <div>
+                <form
+                  action="https://taipa.us7.list-manage.com/subscribe/post?u=891fb8b5de33e6005ec5ede64&amp;id=d578cf9cce"
+                  method="post"
+                  id="mc-embedded-subscribe-form"
+                  name="mc-embedded-subscribe-form"
+                  class="validate"
+                  target="_blank"
+                  novalidate
+                >
+                  <div id="mc_embed_signup_scroll">
+                    <h5 class="font-weight-normal h4 my-4">
+                      Suscríbete y recibe S/ 10 de descuento!
+                    </h5>
+                    <input
+                      type="email"
+                      value=""
+                      name="EMAIL"
+                      class="email p-1"
+                      id="mce-EMAIL"
+                      placeholder="Dirección de email"
+                      required
+                    />
+                    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                    <div
+                      style="position: absolute; left: -5000px"
+                      aria-hidden="true"
+                    >
+                      <input
+                        type="text"
+                        name="b_891fb8b5de33e6005ec5ede64_d578cf9cce"
+                        tabindex="-1"
+                        value=""
+                      />
+                    </div>
+                    <ul class="list-inline mt-3">
+                      <div>
+                        <input
+                          type="submit"
+                          value="Suscríbete"
+                          name="subscribe"
+                          id="mc-embedded-subscribe"
+                          class="btn btn-primary"
+                        />
+                      </div>
+                    </ul>
+                  </div>
+                </form>
+              </div>
+
+              <!--End mc_embed_signup-->
+              <!--<p class="my-1 text-muted">Próximamente en:</p>
               <li class="list-inline-item mb-2 mb-lg-0">
                 <a class="btn btn-primary btn-lg px-4" href="#">
                   <i class="fab fa-google-play mr-3"></i>Google Play</a
@@ -108,7 +161,7 @@
                 <a class="btn btn-primary btn-lg px-4" href="#">
                   <i class="fab fa-app-store mr-3"></i>App Store</a
                 >
-              </li>
+              </li>-->
             </ul>
           </div>
           <div class="col-lg-6 ml-auto">
@@ -141,25 +194,21 @@
           <p class="h6 text-uppercase text-primary">Concepto</p>
           <h2 class="mb-5">¿Por qué estamos aquí?</h2>
           <p>
-            TaiPa quiere ser el Rappi de aquellas personas del Perú. Ponemos en
-            contacto pequeños restaurantes y aquellas personas que quieran
+            <b>TaiPa quiere ser el Rappi de los emprendedores del Perú. </b
+            >Ponemos en contacto pequeños restaurantes y personas que quieran
             ofrecer sus platos, con aquellas que quieran comida variada y
             accesible.
           </p>
           <p>
             Decidimos crear TaiPa porque nos dimos cuenta de que en el Perú aún
-            había escasa experiencia en plataformas digitales, muchas personas
-            con talento para la cocina y un servicio de delivery que no servía a
-            todas las capas de la población.
+            había escasa experiencia en plataformas digitales,
+            <b>muchas personas con talento para la cocina</b> y un
+            <b
+              >servicio de delivery que no servía a todas las capas de la
+              población</b
+            >.
           </p>
-          <p>
-            La economía peruana se sostiene sobre altos porcentajes de
-            informalidad. Estas personas son las más afectadas por la pandemia
-            COVID que ha dejado algunas familias en situaciones precarias. Si
-            bien TaiPa no soluciona el problema de la informalidad directamente,
-            diversifica los ingresos de las familias y crea una oferta de comida
-            al acceso de todas las personas.
-          </p>
+
           <!--<div class="row pb-5">
             <div class="col-lg-4 col-md-6 mb-4 mb-lg-0">
               <div class="card border-0 shadow rounded-lg py-4 text-left">
@@ -217,8 +266,8 @@
                 humildes.
               </p>
               <p class="text-muted">
-                Queremos ser la herramienta que permita que el emprendedor
-                peruano se transforme en empresario:
+                Queremos ser la herramienta que permita que el
+                <b> emprendedor peruano</b> se transforme en empresario:
               </p>
               <ul>
                 <li>Digitalización</li>
@@ -226,7 +275,8 @@
               </ul>
 
               <p class="text-muted">
-                Creamos un punto de encuentro entre cocineros de todo tipo:
+                Creamos un <b>punto de encuentro</b> entre cocineros de todo
+                tipo:
               </p>
               <ul>
                 <li>Desempleados</li>
@@ -237,13 +287,10 @@
                 Y todo tipo de personas que busquen comer algo rápido u
                 organizar sus comidas semanales.
               </p>
-              <p>
-                Esta oferta no se limita al delivery, sino que se abre al
-                takeaway o cualquier tipo de pacto que ambas partes convengan.
-              </p>
             </div>
           </div>
         </div>
+
         <div class="container">
           <div class="row py-5">
             <div class="col-lg-6 ml-auto">
@@ -386,6 +433,7 @@
         </div>
       </div>
     </section>
+
     <a class="scropll-top-btn" id="scrollTop" href="#"
       ><i class="fas fa-long-arrow-alt-up"></i
     ></a>
@@ -400,30 +448,29 @@
             <h2 class="h5 mb-4">Contact Info</h2>
             <ul class="list-unstyled mr-4 mb-3">
               <li class="mb-2">
-                <a class="footer-link" href="mailto:informallapp@gmail.com"
-                  >informallapp@gmail.com</a
+                <a class="footer-link" href="mailto:taipa.app@gmail.com"
+                  >taipa.app@gmail.com</a
                 >
               </li>
             </ul>
             <ul class="list-inline mb-0">
               <li class="list-inline-item">
-                <a class="social-link" href="#"
+                <a
+                  class="social-link"
+                  href="https://www.facebook.com/taipa.aplicacion"
                   ><i class="fab fa-facebook-f"></i
+                ></a>
+              </li>
+              <li class="list-inline-item">
+                <a
+                  class="social-link"
+                  href="https://www.instagram.com/taipa.app/"
+                  ><i class="fab fa-instagram"></i
                 ></a>
               </li>
               <li class="list-inline-item">
                 <a class="social-link" href="#"
                   ><i class="fab fa-twitter"></i
-                ></a>
-              </li>
-              <li class="list-inline-item">
-                <a class="social-link" href="#"
-                  ><i class="fab fa-google-plus"></i
-                ></a>
-              </li>
-              <li class="list-inline-item">
-                <a class="social-link" href="#"
-                  ><i class="fab fa-instagram"></i
                 ></a>
               </li>
             </ul>
