--- a/index.html
+++ b/index.html
@@ -118,7 +118,8 @@
                       type="email"
                       value=""
                       name="EMAIL"
-                      class="email p-1"
+                      class="email shadow border-0 p-2 w-100"
+                      style="border-radius: 0.5em"
                       id="mce-EMAIL"
                       placeholder="Dirección de email"
                       required
